--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".PizzaActivity"></activity>
+        <activity android:name=".PizzaActivity" />
     </application>
 
 </manifest>
