--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".PizzaActivity" />
+        <activity android:name=".Preferencias"></activity>
     </application>
 
 </manifest>
